# hf_llm_course

./: .gitignore  README.md  pyproject.toml
chapter2/: behindthepipeline.ipynb  models.ipynb  multiple_sequences.ipynb  puttingitalltogether.ipynb  tokenizers.ipynb
chapter3/: a_full_training_loop.ipynb  fine_tuning_with_trainer_api.ipynb  processing_the_data.ipynb  understanding_learning_curves.ipynb
chapter4/: sharing_pretrained_models.ipynb  using_pretrained_models.ipynb
chapter5/: big_data.ipynb  create_your_own_dataset.ipynb  dataset_isnt_on_hub.ipynb  time_to_slice_and_dice.ipynb
